Fixed Tests by using TimeProvider